Make it fully responsive; add command to serve locally

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title><!-- Title goes here --></title>
   <meta name="description" content="description goes here>">
   <meta name="author" content="author goes here">
+
   <link rel="stylesheet" href="css/styles.css">
 </head>
 
@@ -13,7 +16,6 @@
 
   <!-- Insert content here -->
 
-  <!--<img src="img/kolibri.png">-->
   <script src="js/scripts.js"></script>
 </body>
 </html>
