Add sidebar styling and sample code

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 
 <body>
 
-  <!-- Insert content here -->
+  <div class="main-content">
+    <!-- Insert content here -->
+  </div>
 
   <script src="js/scripts.js"></script>
 </body>
